# paper-layout-parser

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
benchmarks/: __init__.py  __main__.py  cli.py
benchmarks/caption_evaluator/: batch.py  builder.py  evaluator.py  manifest.py  metrics.py  reporter.py
benchmarks/caption_matching/: __init__.py  __main__.py  batch_evaluator.py  cli.py  dataset.py  evaluator.py  reporter.py
benchmarks/caption_matching/commands/: annotate.py  build.py  evaluate.py  report.py  validate.py
benchmarks/tools/: __init__.py
benchmarks/tools/vlm_annotator/: annotator.py  base.py
benchmarks/vlm_annotator/: __init__.py  annotator.py  anthropic_client.py  base.py  litellm_client.py  ollama_client.py  prompts.py
config/: config.yaml
docs/: ENHANCED_EXTRACTION_DESIGN.md  architecture.md  benchmark-evaluation.md  caption-matching-benchmark-generation.md  caption_search_direction.md  development-log.md  label_studio_export.md  vlm_annotation_system.md
scripts/: export_to_label_studio.py
src/: __init__.py  benchmark.py  figure_table_extractor.py  layout_detector.py  pdf_converter.py  result_processor.py  visualizer.py
src/benchmark/: __main__.py  cli.py
src/benchmark/commands/: __init__.py  annotate.py  build.py  evaluate.py  report.py  validate.py
src/caption_matching/: __init__.py  benchmark.py  evaluator.py  reporter.py
src/core/: figure_extractor.py  result_processor.py
src/doclayout/: __init__.py
src/doclayout/core/: __init__.py
src/doclayout/matching/: __init__.py
src/doclayout/visualization/: __init__.py  legend.py  renderer.py  styles.py
src/matching/: caption_matcher.py  types.py
src/vlm_annotator/: __init__.py  annotator.py  image_renderer.py  openai_client.py
tests/: __init__.py  conftest.py
tests/test_matching/: __init__.py  test_caption_matcher.py
tests/test_visualization/: test_renderer.py
