[project]
name = "yolo-layout-detection"
version = "1.0.0"
description = "YOLOv8 PDF Document Layout Detection using DocLayout-YOLO and YOLOv8 models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Author", email = "author@example.com" }
]
keywords = ["yolo", "document-layout", "pdf", "detection", "deep-learning"]

dependencies = [
    "pymupdf>=1.24.0",
    "doclayout-yolo>=0.0.2",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
yolo-layout = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
