[project]
name = "doclayout"
version = "2.1.0"
description = "PDF Document Layout Detection using DocLayout-YOLO"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Author", email = "author@example.com" }
]
keywords = ["yolo", "document-layout", "pdf", "detection", "deep-learning"]

dependencies = [
    "pymupdf>=1.24.0",
    "doclayout-yolo>=0.0.2",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "datasets<4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
vlm = [
    "litellm>=1.40.0",
    "tenacity>=8.0.0",
]
labelstudio = [
    "minio>=7.2.0",
]

[project.scripts]
doclayout = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/doclayout"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
